2013-11-05  Joseph Myers  <joseph@codesourcery.com>

	* config/i386/i386.c (ix86_float_exceptions_rounding_supported_p):
	New function.
	(TARGET_FLOAT_EXCEPTIONS_ROUNDING_SUPPORTED_P): Define.

2013-11-05  Marc Glisse  <marc.glisse@inria.fr>

	PR tree-optimization/58958
	* tree-ssa-alias.c (ao_ref_init_from_ptr_and_size): Use
	get_addr_base_and_unit_offset instead of get_ref_base_and_extent.

2013-11-05  Marc Glisse  <marc.glisse@inria.fr>

	* tree-ssa-alias.h (ranges_overlap_p): Handle negative offsets.
	* tree-ssa-alias.c (ao_ref_init_from_ptr_and_size): Likewise.

2013-11-05  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/58984
	* ipa-prop.c (ipa_load_from_parm_agg_1): Add SIZE_P argument,
	set *SIZE_P if non-NULL on success.
	(ipa_load_from_parm_agg, ipa_analyze_indirect_call_uses): Adjust
	callers.
	(ipcp_transform_function): Likewise.  Punt if size of access
	is different from TYPE_SIZE on v->value's type.

2013-11-05  Tobias Burnus  <burnus@net-b.de>

	* doc/invoke.texi (-fopenmp-simd): Document new option.
	* gimplify.c (gimplify_body): Accept -fopenmp-simd.
	* omp-low.c (execute_expand_omp, execute_lower_omp): Ditto.
	* tree.c (attribute_value_equal): Ditto.

2013-11-04  Wei Mi  <wmi@google.com>

	* sched-rgn.c (add_branch_dependences): Keep insns in
	a SCHED_GROUP at the end of BB to remain their location.

2013-11-04  Wei Mi  <wmi@google.com>

	* gcc/config/i386/i386.c (memory_address_length): Extract a part
	of code to rip_relative_addr_p.
	(rip_relative_addr_p): New Function.
	(ix86_macro_fusion_p): Ditto.
	(ix86_macro_fusion_pair_p): Ditto.
	* gcc/config/i386/i386.h: Add new tune features about macro-fusion.
	* gcc/config/i386/x86-tune.def (DEF_TUNE): Ditto.
	* gcc/doc/tm.texi: Generated.
	* gcc/doc/tm.texi.in: Ditto.
	* gcc/haifa-sched.c (try_group_insn): New Function.
	(group_insns_for_macro_fusion): Ditto.
	(sched_init): Call group_insns_for_macro_fusion.
	* gcc/target.def: Add two hooks: macro_fusion_p and
	macro_fusion_pair_p.
